# albatross

./: Dockerfile  README.md  pyproject.toml
providers/pypi_provider/: README.md  pyproject.toml
providers/pypi_provider/src/pypi_provider/: __init__.py
src/albatross/: main.py
