[project]
name = "albatross"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" }
]
dependencies = [
    "httpx>=0.27.0",
    "tqdm>=4.66.2",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "orjson>=3.9.15",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "albatross:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.3",
]

[tool.rye.workspace]
members = ["providers/*"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/albatross"]
