[project]
name = "pypi_provider"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "konstin", email = "konstin@mailbox.org" }
]
dependencies = [
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pypi"]
